--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "chromadb": "^1.8.1",
     "cohere-ai": "^7.13.1",
     "convex": "^1.16.0",
+    "dotenv": "^16.4.5",
     "firebase-admin": "^12.5.0",
     "typescript": "^5.6.2"
   }
